[tool.poetry]
name = "skwid-game-bot"
version = "0.1.0"
description = ""
authors = ["cooldude069 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.1.0"
pymongo = "^4.0.1"
discord-components = "^2.1.2"
topggpy = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
